--- a/apps/houseplanner/static/houseplanner/css/index_style.css
+++ b/apps/houseplanner/static/houseplanner/css/index_style.css
@@ -9,8 +9,8 @@ html {
   font-family: GillSans, Calibri, Trebuchet, sans-serif;
 }
 html, body, .button-wrapper{
-  height: 100%;
-  background-image: url('../images/housemates1.jpg');
+  height: 70vh;
+  background-image: url('../images/bgimage.jpg');
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
